[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpflow"
version = "0.5.0"
description = "Deterministic orchestration wrapper for Repo Prompt rp-cli"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "JD + Jarvis" }]
license = { text = "MIT" }
keywords = ["repoprompt", "rp-cli", "automation", "mcp", "openclaw"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Intended Audience :: Developers"
]

[project.scripts]
rpflow = "rpflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
